Rough outline added

--- a/communs04/proposal.tex
+++ b/communs04/proposal.tex
@@ -18,5 +18,18 @@
 \begin{document}
   \maketitle
   \section{Introduction}
-    
+    % Twitter
+    % Orthographic variation
+    % Social network analysis
+      % Place in sociolinguistics
+      % Centrality
+      % Community detection
+    % Individuals positioned in a community
+    % Research question
+      % Do individuals' spelling of (lol) become more stable as they become more central in a community?
+  \section{Method}
+    % Data collection
+    % Data coding
+    % Descriptive statistics
+    % Significance tests
 \end{document}
