--- a/communs06/summary05.tex
+++ b/communs06/summary05.tex
@@ -20,7 +20,16 @@
   \maketitle
   \fullcitebib{podesva_phonation_2007}
   \section{Introduction and The Study}
+    \noindent{}\citeauthor{podesva_phonation_2007}'s (\citeyear{podesva_phonation_2007}) objective with this article is to show that variable phonation types, particularly falsetto, can be used to construct personae.
+    \begin{itemize}
+      \item To do this, he analyzes the speech of Heath, a gay medical student, in various situations.
+    \end{itemize}
+    Work on phonation, especially in sociolinguistics, has been scarce, but there have been some notable examples.
+    \begin{itemize}
+      \item Most work has used impressionistic analyses by trained phoneticians and focused on associations with communities and groups.
+    \end{itemize}
   \section{Falsetto and Creaky Voice}
+    Falsetto is defined as lengthening and adducting of the vocal folds, leading to higher F0 values.
   \section{Gay Identity}
   \section{Discussion}
 \end{document}
