Finished Podesva sumamry

--- a/communs06/summary05.tex
+++ b/communs06/summary05.tex
@@ -19,17 +19,37 @@
 \begin{document}
   \maketitle
   \fullcitebib{podesva_phonation_2007}
-  \section{Introduction and The Study}
+  \section{Introduction}
     \noindent{}\citeauthor{podesva_phonation_2007}'s (\citeyear{podesva_phonation_2007}) objective with this article is to show that variable phonation types, particularly falsetto, can be used to construct personae.
     \begin{itemize}
+      \item Falsetto is defined as lengthening and adducting of the vocal folds, leading to higher F0 values.
       \item To do this, he analyzes the speech of Heath, a gay medical student, in various situations.
     \end{itemize}
     Work on phonation, especially in sociolinguistics, has been scarce, but there have been some notable examples.
     \begin{itemize}
       \item Most work has used impressionistic analyses by trained phoneticians and focused on associations with communities and groups.
     \end{itemize}
-  \section{Falsetto and Creaky Voice}
-    Falsetto is defined as lengthening and adducting of the vocal folds, leading to higher F0 values.
-  \section{Gay Identity}
+  \section{Falsetto}
+    \noindent{}Data was collected by having Heath record conversations in his daily life.
+    \begin{itemize}
+      \item Three of the recorded situations were analyzed: 1) a barbecue with four friends, 2) a phone conversation between Heath and his father, and 3) a meeting with a patient.
+      \item Sentences containing falsetto, judged impressionistically, were coded as such.
+    \end{itemize}
+    Out of the three situations, Heath used falsetto over twice as much at the barbecue (9.07\%).
+    \begin{itemize}
+      \item In particular, the durations of the BBQ falsettos are also longer than in other situations.
+      \item Relatedly, creaky voice durations were also longer during the BBQ.
+    \end{itemize}
+  \section{Social Meaning}
+    Podesva argues that falsetto is used to construct a flamboyant diva persona.
+    \begin{itemize}
+      \item This is something of an artifact of using falsetto to carry out various discourse functions, importantly sharing the notion of ``expressiveness''.
+      \item He argues that this persona is an attitude that Heath performs as opposed to performing a gay identity.
+    \end{itemize}
   \section{Discussion}
+    \begin{enumerate}
+      \item Is Podesva's explanation for why the term \lexi{diva} is the most appropriate for describing Heath's style convincing?
+      \item Does Heath have to be aware of the work his falsetto is doing in order to use it to do that work?
+      \item How should we understand identity in light of Podesva's discussion at the end of the Gay Identity section?
+    \end{enumerate}
 \end{document}
