--- a/communs07/summary06.tex
+++ b/communs07/summary06.tex
@@ -7,9 +7,9 @@
     \addbibresource{References.bib}
 
   % Document information
-  \title{Summary of Podesva (2007)}
+  \title{Summary of Wright (2007) Chapter 2}
   \author{Joshua McNeill}
-  \date{29 October 2020}
+  \date{12 November 2020}
 
   % New commands
   \newcommand{\orth}[1]{$\langle$#1$\rangle$}
@@ -18,38 +18,37 @@
 
 \begin{document}
   \maketitle
-  \fullcitebib{podesva_phonation_2007}
+  \fullcitebib{wright_understanding_2015}
   \section{Introduction}
-    \noindent{}\citeauthor{podesva_phonation_2007}'s (\citeyear{podesva_phonation_2007}) objective with this article is to show that variable phonation types, particularly falsetto, can be used to construct personae.
+    Exploitation as a general concept central to class conflict is systematically ignored in the Weberian tradition.
+    This chapter's objective then is twofold:
     \begin{itemize}
-      \item Falsetto is defined as lengthening and adducting of the vocal folds, leading to higher F0 values.
-      \item To do this, he analyzes the speech of Heath, a gay medical student, in various situations.
+      \item To understand Weber's concept of class and how it contrasts with Marx's concept and exploitation.
+      \item To defend the importance of exploitation in sociological work.
     \end{itemize}
-    Work on phonation, especially in sociolinguistics, has been scarce, but there have been some notable examples.
+  \section{Weber's class and Convergences with Marx's}
+    Weber's conceptualization of class:
     \begin{itemize}
-      \item Most work has used impressionistic analyses by trained phoneticians and focused on associations with communities and groups.
+      \item Class locates individuals only within the economic sphere of social interaction, not the communal nor the political spheres.
+      \item Class, then, is not a group as there is no shared identity.
+      \item Additionally, class is the rationalization of social relations relative to one's material conditions
     \end{itemize}
-  \section{Falsetto}
-    \noindent{}Data was collected by having Heath record conversations in his daily life.
+    This conceptualization aligns with Marx's in several ways.
+    Classes are relational, defined in opposition to each other.
+    Having or not having property is central to one's class.
+    Neither view classes as organized social actors, but one's relation to materials influences their behavior in both conceptualizations, and the preconditions to organization do exist in capitalist societies.
+    Finally, both view class as in competition with status groups.
+  \section{Differences between Weber and Marx}
+    In general, Weber saw class as a determinant of life chances where Marx saw this as well as its role in exploitation.
+    For Weber, class involves rationalized decisions in the market, but for Marx, exploitation is also involved so that slaves, for instance, form a class but for Weber a status group.
+    This has several ramifications:
     \begin{itemize}
-      \item Three of the recorded situations were analyzed: 1) a barbecue with four friends, 2) a phone conversation between Heath and his father, and 3) a meeting with a patient.
-      \item Sentences containing falsetto, judged impressionistically, were coded as such.
-    \end{itemize}
-    Out of the three situations, Heath used falsetto over twice as much at the barbecue (9.07\%).
-    \begin{itemize}
-      \item In particular, the durations of the BBQ falsettos are also longer than in other situations.
-      \item Relatedly, creaky voice durations were also longer during the BBQ.
-    \end{itemize}
-  \section{Social Meaning}
-    Podesva argues that falsetto is used to construct a flamboyant diva persona.
-    \begin{itemize}
-      \item This is something of an artifact of using falsetto to carry out various discourse functions, importantly sharing the notion of ``expressiveness''.
-      \item He argues that this persona is an attitude that Heath performs as opposed to performing a gay identity.
+      \item The research questions we ask and how we approach those questions are shaped by which framework we use.
+      \item One's agenda is also shaped by the framework: Weber's work is oriented towards efficiency for capitalists and Marx towards the plight of workers.
     \end{itemize}
   \section{Discussion}
     \begin{enumerate}
-      \item Is Podesva's explanation for why the term \lexi{diva} is the most appropriate for describing Heath's style convincing?
-      \item Does Heath have to be aware of the work his falsetto is doing in order to use it to do that work?
-      \item How should we understand identity in light of Podesva's discussion at the end of the Gay Identity section?
+      \item If it's possible to be sympathetic towards those being exploited without having exploitation as a formal concept in class framework, then how much of an impact does the framework really have on one's agenda?
+      \item How would the concept of exploitation change our interpretation of class-related phenomena in sociolinguistics such as hypercorrection or covert prestige?
     \end{enumerate}
 \end{document}
